--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -4,6 +4,7 @@
   <title>[Title of your project]</title>
   <meta charset="UTF-8" />
   <link rel="stylesheet" type="text/css" href="main.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
   <h1>Welcome to [Title of your project]</h1>
