--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -7,6 +7,28 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-  <h1>Welcome to [Title of your project]</h1>
+  <h1 style="text-align: center;">Welcome to [Title of your project]</h1>
+  <div class="container">
+    <div class="row gy-5 p-5" style="align-items: center;">
+      <div class="col-md-4">
+        <div class="p-auto border bg-light">Custom column padding</div>
+      </div>
+      <div class="col-md-4">
+        <div class="p-auto border bg-info"><img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Long_Fine_Rectangle_%28plain%29.png" width="100%" height="auto" /></div>
+      </div>
+      <div class="col-md-4">
+        <div class="p-auto border bg-light"><img src="https://static01.nyt.com/images/2021/04/30/multimedia/30xp-meme/29xp-meme-superJumbo-v3.jpg?quality=75&auto=webp" width="100%" height="auto" /></div>
+      </div>
+      <div class="col-md-4">
+        <div class="p-auto border bg-light"></div>
+      </div>
+      <div class="col-md-4">
+        <div class="p-auto border bg-light">Custom column padding</div>
+      </div>
+      <div class="col-md-4">
+        <div class="p-auto border bg-light">Custom column padding</div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
