--- a/Client/public/second.html
+++ b/Client/public/second.html
@@ -7,21 +7,22 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-
   <div class="container">
-    <div class="row">
-      <div class="col-md-11">
+    <div class="row pt-5">
+      <div class="col-11">
         <h1><span class="file-label">File:</span> <span class="file-name">fun.img</span></h1>
       </div>
-      <div class="col-md-1">
+      <div class="col-1">
         <a href="../public/index.html">
           <div class="close-button"></div>
         </a>
       </div>
     </div>
-    <center> 
-      <img src="../../assets/img/fun.png" alt="fun" class="img-fluid"/>
-    </center>
+    <div class="row mt-5">
+      <div class="col-12 image-container"> 
+        <img src="../../assets/img/fun.png" alt="fun" class="img-fluid"/>
+      </div>
+    </div>
   </div>
   
 
