--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -4,7 +4,7 @@
   <title>[Title of your project]</title>
   <meta charset="UTF-8" />
   <link rel="stylesheet" type="text/css" href="main.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
   <h1 style="text-align: center;">Welcome to [Title of your project]</h1>
@@ -14,10 +14,10 @@
         <div class="p-auto border bg-light">Custom column padding</div>
       </div>
       <div class="col-md-4">
-        <div class="p-auto border bg-info"><img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Long_Fine_Rectangle_%28plain%29.png" width="100%" height="auto" /></div>
+        <div class="p-auto border bg-light"> <a href="../public/second.html"><img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Long_Fine_Rectangle_%28plain%29.png" width="100%" height="auto" /> </a></div>
       </div>
       <div class="col-md-4">
-        <div class="p-auto border bg-light"><img src="https://static01.nyt.com/images/2021/04/30/multimedia/30xp-meme/29xp-meme-superJumbo-v3.jpg?quality=75&auto=webp" width="100%" height="auto" /></div>
+        <div class="p-auto border bg-light"><a href="../public/second.html"><img src="https://static01.nyt.com/images/2021/04/30/multimedia/30xp-meme/29xp-meme-superJumbo-v3.jpg?quality=75&auto=webp" width="100%" height="auto" /></a></div>
       </div>
       <div class="col-md-4">
         <div class="p-auto border bg-light"></div>
@@ -30,5 +30,25 @@
       </div>
     </div>
   </div>
+</body>
+
+<body>
+    <h1 style="text-align: center;">Welcome to [Title of your project]</h1>
+    <div class="container ">
+        <div class="row">
+          <div class="col-md-4">
+            <a href="../public/second.html" class="border"><img src="https://static01.nyt.com/images/2021/04/30/multimedia/30xp-meme/29xp-meme-superJumbo-v3.jpg?quality=75&auto=webp" width="100%" height="auto" /></a>
+          </div>
+          <div class="col-md-4">
+            <a href="../public/second.html" class="border" style="background-color: black;"><img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Long_Fine_Rectangle_%28plain%29.png" width="100%" height="auto" /></a>
+          </div>
+          <div class="col-md-4">
+            <H5 class="border">Column</H5>
+          </div>
+          <div class="col-md-4">
+            <a href="../public/second.html" class="border"><img src="https://static01.nyt.com/images/2021/04/30/multimedia/30xp-meme/29xp-meme-superJumbo-v3.jpg?quality=75&auto=webp" width="100%" height="auto" /></a>
+          </div>
+        </div>
+    </div>
 </body>
 </html>
