--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -5,50 +5,73 @@
   <meta charset="UTF-8" />
   <link rel="stylesheet" type="text/css" href="main.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <style>
+    .upload-column {
+      text-align: center;
+      padding: 20px;
+      cursor: pointer;
+      overflow: hidden;
+    }
+    #fileInput {
+      display: none;
+    }
+  </style>
 </head>
-<body>
-  <h1 style="text-align: center;">Welcome to [Title of your project]</h1>
-  <div class="container">
-    <div class="row gy-5 p-5" style="align-items: center;">
-      <div class="col-md-4">
-        <div class="p-auto border bg-light">Custom column padding</div>
-      </div>
-      <div class="col-md-4">
-        <div class="p-auto border bg-light"> <a href="../public/second.html"><img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Long_Fine_Rectangle_%28plain%29.png" width="100%" height="auto" /> </a></div>
-      </div>
-      <div class="col-md-4">
-        <div class="p-auto border bg-light"><a href="../public/second.html"><img src="https://static01.nyt.com/images/2021/04/30/multimedia/30xp-meme/29xp-meme-superJumbo-v3.jpg?quality=75&auto=webp" width="100%" height="auto" /></a></div>
-      </div>
-      <div class="col-md-4">
-        <div class="p-auto border bg-light"></div>
-      </div>
-      <div class="col-md-4">
-        <div class="p-auto border bg-light">Custom column padding</div>
-      </div>
-      <div class="col-md-4">
-        <div class="p-auto border bg-light">Custom column padding</div>
-      </div>
-    </div>
-  </div>
-</body>
 
-<body>
-    <h1 style="text-align: center;">Welcome to [Title of your project]</h1>
-    <div class="container ">
-        <div class="row">
+<body style="background-color: beige;">
+    <!--
+    <div class="container-fluid">
+        <div class="row gy-3 py-4 justify-content-between">
+            <div class="col-4 border">
+            </div>
+            <div class="col-4 border" style="align-items: end;">
+                <img src="../../assets/img/logo.webp" width="50%" height="auto"/>
+            </div>
+        </div>
+    </div>
+    -->
+
+
+    <h1 style="text-align: center;">Gallery</h1>
+
+    <div class="container-fluid text-center">
+        <div class="row gy-3 py-4" style="align-items: center;">
           <div class="col-md-4">
-            <a href="../public/second.html" class="border"><img src="https://static01.nyt.com/images/2021/04/30/multimedia/30xp-meme/29xp-meme-superJumbo-v3.jpg?quality=75&auto=webp" width="100%" height="auto" /></a>
+            <a href="../public/second.html"><img class="rounded" src="../../assets/img/plant.jpg" width="100%" height="auto" /></a>
           </div>
           <div class="col-md-4">
-            <a href="../public/second.html" class="border" style="background-color: black;"><img src="https://upload.wikimedia.org/wikipedia/commons/6/69/Long_Fine_Rectangle_%28plain%29.png" width="100%" height="auto" /></a>
+            <a href="../public/second.html" ><img class="rounded" src="../../assets/img/green.jpg" width="100%" height="auto" /></a>
+          </div>
+          <div class="col-md-4 upload-column" onclick="uploadFile()">
+            <input type="file" id="fileInput" onchange="handleFileSelect(this)">
+            <img id="uploadedImage" class="rounded" src="../../assets/img/plus.png" width="50%" height="auto" />
           </div>
           <div class="col-md-4">
-            <H5 class="border">Column</H5>
-          </div>
-          <div class="col-md-4">
-            <a href="../public/second.html" class="border"><img src="https://static01.nyt.com/images/2021/04/30/multimedia/30xp-meme/29xp-meme-superJumbo-v3.jpg?quality=75&auto=webp" width="100%" height="auto" /></a>
+            <a href="../public/second.html"><img src="" width="100%" height="auto" /></a>
           </div>
         </div>
     </div>
+
+  <script>
+    function uploadFile() {
+      document.getElementById('fileInput').click();
+    }
+    function handleFileSelect(input) {
+      const file = input.files[0];
+      const uploadedImage = document.getElementById('uploadedImage');
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = function (e) {
+          uploadedImage.src = e.target.result;
+          uploadedImage.style.display = 'block';
+        };
+        reader.readAsDataURL(file);
+      } else {
+        console.error('No file selected');
+        uploadedImage.style.display = 'none';
+      }
+    }
+    </script>
 </body>
 </html>
+
