--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -5,17 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="stylesheet" type="text/css" href="main.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <style>
-    .upload-column {
-      text-align: center;
-      padding: 20px;
-      cursor: pointer;
-      overflow: hidden;
-    }
-    #fileInput {
-      display: none;
-    }
-  </style>
+
 </head>
 <body style="background-color: beige;">
     <!--
@@ -30,47 +20,31 @@
     </div>
     -->
 
+    <h1>Gallery</h1>
 
-    <h1 style="text-align: center;">Gallery</h1>
+    <div class="container text-center">
+        <div class="row gy-3 py-4" id="imagesRow">
 
-    <div class="container-fluid text-center">
-        <div class="row gy-3 py-4" style="align-items: center;">
-          <div class="col-md-4">
-            <a href="../public/second.html"><img class="rounded" src="../../assets/img/plant.jpg" width="100%" height="auto" /></a>
+          <div class="col-md-4" id="imageDiv">
+            <a href="../public/second.html">
+              <img class="rounded img-fluid img-thumbnail" src="../../assets/img/plant.jpg" />
+            </a>
           </div>
+          
           <div class="col-md-4">
-            <a href="../public/second.html" ><img class="rounded" src="../../assets/img/green.jpg" width="100%" height="auto" /></a>
+            <a href="../public/second.html" >
+              <img class="rounded img-fluid img-thumbnail" src="../../assets/img/green.jpg"/>
+            </a>
           </div>
-          <div class="col-md-4 upload-column" onclick="uploadFile()">
+      
+          <div class="col-md-4" id="uploadDiv">
             <input type="file" id="fileInput" onchange="handleFileSelect(this)">
-            <img id="uploadedImage" class="rounded" src="../../assets/img/plus.png" width="50%" height="auto" />
+            <img id="uploadedImage" class="rounded img-fluid upload-column" src="../../assets/img/plus-button.png" onclick="uploadFile()"/>
           </div>
-          <div class="col-md-4">
-            <a href="../public/second.html"><img src="" width="100%" height="auto" /></a>
-          </div>
+
         </div>
     </div>
-
-  <script>
-    function uploadFile() {
-      document.getElementById('fileInput').click();
-    }
-    function handleFileSelect(input) {
-      const file = input.files[0];
-      const uploadedImage = document.getElementById('uploadedImage');
-      if (file) {
-        const reader = new FileReader();
-        reader.onload = function (e) {
-          uploadedImage.src = e.target.result;
-          uploadedImage.style.display = 'block';
-        };
-        reader.readAsDataURL(file);
-      } else {
-        console.error('No file selected');
-        uploadedImage.style.display = 'none';
-      }
-    }
-    </script>
+    <script src="uploadImg.js"></script> 
 </body>
 </html>
 
