Passing img src to second.html
Clicking a certain image in galleria passes that img to second.html screen to show that image

--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -26,13 +26,13 @@
         <div class="row gy-3 py-4" id="imagesRow">
 
           <div class="col-md-4" id="imageDiv">
-            <a href="../public/second.html">
+            <a href="../public/second.html?image=../../assets/img/plant.jpg">
               <img class="rounded img-fluid img-thumbnail" src="../../assets/img/plant.jpg" />
             </a>
           </div>
 
           <div class="col-md-4">
-            <a href="../public/second.html" >
+            <a href="../public/second.html?image=../../assets/img/green.jpg">
               <img class="rounded img-fluid img-thumbnail" src="../../assets/img/green.jpg"/>
             </a>
           </div>
