An alternative gallery-like layout. Replaced Index.html

--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body style="background-color: black;">
-    <nav class="navbar navbar-expand-lg navbar-light sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top rounded">
         <div class="container">
           <a class="navbar-brand" href="#">
             <!-- Replace "logo.jpg" with your actual logo path or URL -->
@@ -17,10 +17,7 @@
           </a>
 
           <div class="d-flex" style="align-items: center;">
-            <span>Test text </span>
-            <span> Lorum Ipsum</span>
-            <img src="../../assets/img/plus-button.png" alt="" class="logo-img">
-
+            <p>Lorum Ipsum</p>
           </div>
         </div>
     </nav>
@@ -56,18 +53,12 @@
             <div class="col-md-4">
                 <a href="../public/second.html?image=../../assets/img/fun.png">
                     <img src="../../assets/img/fun.png" alt="Image 3" class="column-img" loading="lazy">
-                    <img src="../../assets/img/green.jpg" alt="Image 1" class="column-img" loading="lazy">
-                    <img src="../../assets/img/plant.jpg" alt="Image 4" class="column-img" loading="lazy">
                 </a>
                 <a href="../public/second.html?image=../../assets/img/green.jpg">
                     <img src="../../assets/img/green.jpg" alt="Image 6" class="column-img" loading="lazy">
-                    <img src="../../assets/img/green.jpg" alt="Image 1" class="column-img" loading="lazy">
-                    <img src="../../assets/img/plant.jpg" alt="Image 4" class="column-img" loading="lazy">
                 </a>
                 <a href="../public/second.html?image=../../assets/img/grey.jpg">
                     <img src="../../assets/img/grey.jpg" alt="Image 6" class="column-img" loading="lazy">
-                    <img src="../../assets/img/green.jpg" alt="Image 1" class="column-img" loading="lazy">
-                    <img src="../../assets/img/plant.jpg" alt="Image 4" class="column-img" loading="lazy">
                 </a>
             </div>
         </div>
