--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -13,7 +13,7 @@
         <div class="container">
           <a class="navbar-brand" href="#">
             <!-- Replace "logo.jpg" with your actual logo path or URL -->
-            <img src="../../assets/img/logo.webp" alt="Logo" class="logo-img">
+            <img src="../../assets/img/squid.png" alt="Logo" class="logo-img">
           </a>
 
           <div class="d-flex" style="align-items: center;">
