new logo and font

--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -14,6 +14,7 @@
           <a class="navbar-brand" href="#">
             <!-- Replace "logo.jpg" with your actual logo path or URL -->
             <img src="../../assets/img/squid.png" alt="Logo" class="logo-img">
+            <span class="logo-text">PicPics</span>
           </a>
 
           <div class="d-flex" style="align-items: center;">
