--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -8,8 +8,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 </head>
-<body style="background-color: black;">
-    <nav class="navbar navbar-expand-lg navbar-light sticky-top rounded">
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top rounded bg-light">
         <div class="container">
           <a class="navbar-brand" href="#">
             <!-- Replace "logo.jpg" with your actual logo path or URL -->
