--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -1,69 +1,43 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <title>Galleria</title>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="main.css" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
 
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light sticky-top rounded bg-light">
-        <div class="container">
-          <a class="navbar-brand" href="#">
-            <!-- Replace "logo.jpg" with your actual logo path or URL -->
-            <img src="../../assets/img/squid.png" alt="Logo" class="logo-img">
-            <span class="logo-text">PicPics</span>
-          </a>
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
+    <title>React App</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
 
-          <div class="d-flex" style="align-items: center;">
-            <p>Lorum Ipsum</p>
-          </div>
-        </div>
-    </nav>
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
 
-    <div class="container mt-4">
-        <div class="row">
-            <div class="col-md-4">
-                <img src="../../assets/img/green.jpg" alt="Image 1" class="column-img" loading="lazy">
-                <img src="../../assets/img/plant.jpg" alt="Image 4" class="column-img" loading="lazy">
-                <img src="../../assets/img/green.jpg" alt="Image 1" class="column-img" loading="lazy">
-                <img src="../../assets/img/plant.jpg" alt="Image 4" class="column-img" loading="lazy">
-                <img src="../../assets/img/green.jpg" alt="Image 1" class="column-img" loading="lazy">
-                <img src="../../assets/img/plant.jpg" alt="Image 4" class="column-img" loading="lazy">
-                <img src="../../assets/img/green.jpg" alt="Image 1" class="column-img" loading="lazy">
-                <img src="../../assets/img/plant.jpg" alt="Image 4" class="column-img" loading="lazy">
-                <img src="../../assets/img/green.jpg" alt="Image 1" class="column-img" loading="lazy">
-                <img src="../../assets/img/plant.jpg" alt="Image 4" class="column-img" loading="lazy">
-            </div>
-
-            <div class="col-md-4">
-                <img src="../../assets/img/logo.webp" alt="Image 2" class="column-img" loading="lazy">
-                <img src="../../assets/img/landscape.png" alt="Image 5" class="column-img" loading="lazy">
-                <img src="../../assets/img/green.jpg" alt="Image 1" class="column-img" loading="lazy">
-                <img src="../../assets/img/plant.jpg" alt="Image 4" class="column-img" loading="lazy">
-                <img src="../../assets/img/green.jpg" alt="Image 1" class="column-img" loading="lazy">
-                <img src="../../assets/img/plant.jpg" alt="Image 4" class="column-img" loading="lazy">
-                <img src="../../assets/img/green.jpg" alt="Image 1" class="column-img" loading="lazy">
-                <img src="../../assets/img/plant.jpg" alt="Image 4" class="column-img" loading="lazy">
-                <img src="../../assets/img/green.jpg" alt="Image 1" class="column-img" loading="lazy">
-                <img src="../../assets/img/plant.jpg" alt="Image 4" class="column-img" loading="lazy">
-            </div>
-
-            <div class="col-md-4">
-                <a href="../public/second.html?image=../../assets/img/fun.png">
-                    <img src="../../assets/img/fun.png" alt="Image 3" class="column-img" loading="lazy">
-                </a>
-                <a href="../public/second.html?image=../../assets/img/green.jpg">
-                    <img src="../../assets/img/green.jpg" alt="Image 6" class="column-img" loading="lazy">
-                </a>
-                <a href="../public/second.html?image=../../assets/img/grey.jpg">
-                    <img src="../../assets/img/grey.jpg" alt="Image 6" class="column-img" loading="lazy">
-                </a>
-            </div>
-        </div>
-    </div>
-    <script src="uploadImg.js"></script> 
-</body>
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
+  </body>
 </html>
